--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
     "description": "This is a Gulp boilerplate that is part of the Pear HTML/Sass boilerplate",
     "private": true,
     "devDependencies": {
-        "browser-sync": "^2.26.3",
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^6.0.0",
-        "gulp-clean-css": "^4.0.0",
+        "browser-sync": "^2.26.3"
+    },
+    "dependencies": {
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
-        "gulp-file-include": "^2.0.1",
+        "gulp-file-include": "^2.3.0",
         "gulp-htmlmin": "^5.0.1",
-        "gulp-imagemin": "^5.0.3",
         "gulp-plumber": "^1.2.1",
-        "gulp-rename": "^1.4.0",
-        "gulp-sass": "^4.0.2",
-        "gulp-size": "^3.0.0",
-        "gulp-uglify": "^3.0.1",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^5.0.0",
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1"
     }
